Modulo de galeria implementado
